--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,15 +12,15 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form action="{% url 'search' %}" method="GET">
+                <form action="{% url 'encyclopedia:search' %}" method="GET">
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                     <input type="submit" value="Search">
                 </form>
                 <div>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'encyclopedia:new' %}">Create New Page</a>
                 </div>
                 <div>
                     Random Page
