--- a/encyclopedia/templates/encyclopedia/new.html
+++ b/encyclopedia/templates/encyclopedia/new.html
@@ -6,4 +6,9 @@
 
 {% block body %}
     <h1>New Page</h1>
+    <form action="{% url 'encyclopedia:new' %}" method="POST">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Add new entry">
+    </form>
 {% endblock %}
